--- a/Selendis/Base.lproj/Main.storyboard
+++ b/Selendis/Base.lproj/Main.storyboard
@@ -43,15 +43,15 @@
                                             <outlet property="textView" destination="BrK-wR-Fjn" id="dHp-L4-qpi"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="pictureItemCell" id="Y5S-js-hsT" customClass="PictureItemCell" customModule="Selendis" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="118" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="pictureItemCell" rowHeight="160" id="Y5S-js-hsT" customClass="PictureItemCell" customModule="Selendis" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="118" width="414" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Y5S-js-hsT" id="x7T-hX-mpu">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I am a picture placeholder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKC-6T-fU5">
-                                                    <rect key="frame" x="32" y="11.5" width="197" height="21"/>
+                                                    <rect key="frame" x="32" y="69.5" width="197" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -67,7 +67,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="selectorItemCell" rowHeight="160" id="TB9-cm-3d1" customClass="SelectorItemCell" customModule="Selendis" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="161.5" width="414" height="160"/>
+                                        <rect key="frame" x="0.0" y="278" width="414" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TB9-cm-3d1" id="2sW-LA-3Bh">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
